--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,126 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_picture"
-    tools:context=".LoginActivity">
+    android:id="@+id/drawerLayout"
+    android:fitsSystemWindows="true"
+    android:background="#F7FFFFFF"
+    android:minWidth="19dp">
 
-    <TextView
-        android:id="@+id/loginInfoText2"
-        android:layout_width="324dp"
-        android:layout_height="77dp"
-        android:fontFamily="sans-serif"
-        android:text="Введите ваш номер телефона (12 сиволов)"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="#031245"
-        android:textSize="22sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="422dp"
-        android:layout_height="78dp"
-        android:backgroundTint="@color/blue_dark"
-        android:text="ОДС"
-        android:textColor="#FFFDFD"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="420dp"
-        android:layout_height="73dp"
-        android:backgroundTint="@color/blue_dark"
-        android:textColor="#FFFDFD"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/imageExitButton"
-        android:layout_width="64dp"
-        android:layout_height="61dp"
-        android:background="@drawable/ic_close_black_24dp"
-        android:backgroundTint="@color/white"
-        android:clickable="true"
-        android:onClick="exitApp"
-        app:layout_constraintBottom_toBottomOf="@+id/button6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.551"
-        tools:ignore="OnClick" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="326dp"
-        android:layout_height="300dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.612">
-
-        <TextView
-            android:id="@+id/loginInfoText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="63dp"
-            android:fontFamily="sans-serif"
-            android:text=" Формат: +7 (9ХХ) ХХХ-ХХ-ХХ"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textColor="#031245"
-            android:textSize="22sp"
-            android:textStyle="normal" />
+            android:layout_height="match_parent"
+            android:background="#F7FFFFFF"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/editTextPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:ems="10"
-            android:inputType="phone"
-            android:textColor="#01052C" />
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/blue_light"
+                app:subtitleTextColor="#0A0A0A"
+                app:titleTextColor="#111111" />
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/blue_light"
-            android:onClick="click"
-            android:text="@string/loginButton"
-            android:textSize="22sp" />
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="25dp"
+                android:layout_gravity="center"
+                android:gravity="center">
 
-    <Button
-        android:id="@+id/imageMainHomeButton"
-        android:layout_width="62dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/ic_home_black_24dp__2_"
-        android:backgroundTint="@color/white"
-        android:clickable="true"
-        android:onClick="mainHome"
-        app:layout_constraintBottom_toBottomOf="@+id/button6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button6"
-        app:layout_constraintVertical_bias="0.551" />
+                <TextView
+                    android:id="@+id/loginInfoText2"
+                    android:layout_width="match_parent"
+                    android:layout_height="77dp"
+                    android:layout_gravity="center"
+                    android:fontFamily="sans-serif"
+                    android:text="Введите ваш номер телефона (12 сиволов)"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="#031245"
+                    android:textSize="22sp"
+                    android:textStyle="normal" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/loginInfoText"
+                    android:layout_width="match_parent"
+                    android:layout_height="65dp"
+                    android:fontFamily="sans-serif"
+                    android:text=" Формат: +7 (9ХХ) ХХХ-ХХ-ХХ"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="#031245"
+                    android:textSize="19sp"
+                    android:textStyle="normal" />
+
+                <EditText
+                    android:id="@+id/editTextPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints=""
+                    android:hint="+79XXXXXXXXX"
+                    android:textSize="22dp"
+                    android:ems="10"
+                    android:inputType="phone"
+                    android:textColor="#01052C" />
+
+                <Button
+                    android:id="@+id/buttonInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/blue_light"
+                    android:onClick="click"
+                    android:text="@string/loginButton"
+                    android:textSize="22sp" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header"
+        app:menu="@menu/drawer_menu">
+    </com.google.android.material.navigation.NavigationView>
+</androidx.drawerlayout.widget.DrawerLayout>
