--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,12 @@
     <color name="blue_light">#A9CCE8</color>
     <color name="blue_dark">#FF152B59</color>
     <color name="red">#B60A0A</color>
+
+
+    <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorPrimary">#101010</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="backgroundColor">#FCFCFC</color>
+    <color name="textColor">#000000</color>
 </resources>
